2008-06-23  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_c2s.erl (session_established): Convert JID to the
	expected form outside of the C2S (empty fields must be set to the
	empty string). This fixes the broken routing.

2008-06-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/configure, src/aclocal.m4, src/Makefile.in: Add exmpp detection.

	* src/ejabberd_receiver.erl: Enable the new #xmlel record.

	* src/ejabberd_c2s.erl: First bunch of modifications to use exmpp. All
	FSM state function are updated. But other functions are not for now.
	Users are able to connect to ejabberd but some features may not work.

	* src/ejabberd_c2s.erl: Change the usage of #state.lang somewhat.
	Fix value of DefaultLang: it doesn't contain the whole serialized
	attribute. Use exmpp_jid:make_bare_jid/2 more.

2008-06-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/ejabberd_receiver.erl: Replace the use of xml_stream by
	exmpp_xmlstream. exmpp_xml is configured to produce old #xmlelement
	records. exmpp_xmlstream is configured to send old xmlstreamstart
	tuple. Users are able to connect to ejabberd. Next step:
	ejabberd_c2s.

2008-06-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Start the transition to exmpp.

2008-06-18  Badlop  <badlop@process-one.net>

	* src/ejabberd.app: The ejabberd version number is defined in the
	OTP application resource file, in the key 'vsn' (EJAB-657)
	* src/ejabberd.hrl: The macro VERSION now consults the ejabberd
	application key vsn
	* src/configure.erl: Load the ejabberd application description
	* doc/Makefile: Read ejabberd version from ejabberd.app vsn
	* doc/api/Makefile: Likewise

2008-06-18  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: get_default bugfix (EJAB-656)

2008-06-13  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Allow admins to send messages to
	rooms even if not joined (EJAB-645)
	* doc/guide.tex: Likewise